--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset=" UTF-8 ">
-    <meta name="description " content="Anime Template ">
+    <meta name="description " content="Movies for free - public playlists ">
     <meta name="keywords " content="Anime, unica, creative, html ">
     <meta name="viewport " content="width=device-width, initial-scale=1.0 ">
     <meta http-equiv="X-UA-Compatible " content="ie=edge ">
-    <title>Anime | Template</title>
+    <title>Login</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap " rel="stylesheet ">
@@ -26,11 +26,6 @@
 </head>
 
 <body>
-    <!-- Page Preloder -->
-    <div id="preloder ">
-        <div class="loader "></div>
-    </div>
-
     <!-- Header Section Begin -->
     <header class="header ">
         <div class="container ">
@@ -53,8 +48,6 @@
                                         <li><a href="./anime-details.html ">Anime Details</a></li>
                                         <li><a href="./anime-watching.html ">Anime Watching</a></li>
                                         <li><a href="./blog-details.html ">Blog Details</a></li>
-                                        <li><a href="./signup.html ">Sign Up</a></li>
-                                        <li><a href="./login.html ">Login</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="./blog.html ">Our Blog</a></li>
@@ -114,7 +107,7 @@
                 <div class="col-lg-6 ">
                     <div class="login__register ">
                         <h3>Dont’t Have An Account?</h3>
-                        <a href="# " class="primary-btn ">Register Now</a>
+                        <a href="./signup.html " class="primary-btn ">Register Now</a>
                     </div>
                 </div>
             </div>
@@ -155,17 +148,11 @@
                         <ul>
                             <li class="active "><a href="./index.html ">Homepage</a></li>
                             <li><a href="./categories.html ">Categories</a></li>
-                            <li><a href="./blog.html ">Our Blog</a></li>
+                            <li><a href="./blog.html ">Playlists</a></li>
                             <li><a href="# ">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 ">
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart " aria-hidden="true "></i> by <a href="https://colorlib.com " target="_blank ">Colorlib</a>
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-
-                  </div>
               </div>
           </div>
       </footer>
@@ -191,8 +178,6 @@
     <script src="js/jquery.slicknav.js "></script>
     <script src="js/owl.carousel.min.js "></script>
     <script src="js/main.js "></script>
-
-
 </body>
 
 </html>
