--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign up</title>
+    <title>Contact</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -44,13 +44,12 @@
                                 <li><a href="./categories.html">Categories <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="./categories.html">Categories</a></li>
-                                        <li><a href="./anime-details.html">Anime Details</a></li>
-                                        <li><a href="./anime-watching.html">Anime Watching</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
+                                        <li><a href="./anime-details.html">Film Details</a></li>
+                                        <li><a href="./anime-watching.html">Film Watching</a></li>
+                                        <li><a href="./blog-details.html">Playlist Details</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="./contact.html">Contacts</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -73,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
-                        <h2>Sign Up</h2>
+                        <h2>Contact</h2>
                         <p>Welcome to the official Anime blog.</p>
                     </div>
                 </div>
@@ -82,29 +81,29 @@
     </section>
     <!-- Normal Breadcrumb End -->
 
-    <!-- Signup Section Begin -->
-    <section class="signup spad">
+    <!-- Contact Section Begin -->
+    <section class="contact spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="login__form">
-                        <h3>Sign Up</h3>
+                    <div class="contact__form">
+                        <h3>Contact</h3>
                         <form action="#">
                             <div class="input__item">
                                 <input type="text" placeholder="Email address">
                                 <span class="icon_mail"></span>
                             </div>
                             <div class="input__item">
-                                <input type="text" placeholder="Your Name">
-                                <span class="icon_profile"></span>
+                                <input type="text" placeholder="Subject">
+                                <span class="icon_pencil-edit"></span>
                             </div>
                             <div class="input__item">
-                                <input type="text" placeholder="Password">
-                                <span class="icon_lock"></span>
+                                <textarea placeholder="Message"></textarea>
+                                <span class="icon_comment_alt"></span>
                             </div>
-                            <button type="submit" class="site-btn">Login Now</button>
+                            <button type="submit" class="site-btn">Send Message</button>
+
                         </form>
-                        <h5>Already have an account? <a href="#">Log In!</a></h5>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -121,7 +120,9 @@
             </div>
         </div>
     </section>
-    <!-- Signup Section End -->
+
+
+    <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer">
@@ -140,8 +141,7 @@
                         <ul>
                             <li class="active"><a href="./index.html">Homepage</a></li>
                             <li><a href="./categories.html">Categories</a></li>
-                            <li><a href="./blog.html">Our Blog</a></li>
-                            <li><a href="./contact.html">Contacts</a></li>
+                            <li><a href="./blog.html">Our Playlists</a></li>
                         </ul>
                     </div>
                 </div>
