--- a/blog-details.html
+++ b/blog-details.html
@@ -53,7 +53,7 @@
                                     </ul>
                                 </li>
                                 <li class="active"><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="#">Contacts</a></li>
+                                <li><a href="/contact.html">Contacts</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -218,7 +218,7 @@
                             <li class="active"><a href="./index.html">Homepage</a></li>
                             <li><a href="./categories.html">Categories</a></li>
                             <li><a href="./blog.html">Our Blog</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a href="./contact.html">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
