--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="#">Contacts</a></li>
+                                <li><a href="./contact.html">Contacts</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -688,7 +688,7 @@
                             <li class="active"><a href="./index.html">Homepage</a></li>
                             <li><a href="./categories.html">Categories</a></li>
                             <li><a href="./blog.html">Our Blog</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a href="./contact.html">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
