Revert "commit svg"
This reverts commit f291d37881a2a49dff6f3545098d46a2c0386e26.

--- a/anime-details.html
+++ b/anime-details.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Movies for free - public playlists">
     <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Film details</title>
 
     <!-- Google Font -->
